[gd_scene load_steps=11 format=2]

[ext_resource path="res://components/elements/Styled/IconButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/icons/icon_128_close_thick.svg" type="Texture" id=2]
[ext_resource path="res://components/elements/Styled/custom_dragable_window_popup.gd" type="Script" id=3]
[ext_resource path="res://components/elements/drag_and_drop_control.gd" type="Script" id=4]
[ext_resource path="res://components/elements/Styled/styled_icon_button_hover.gd" type="Script" id=5]
[ext_resource path="res://assets/icons/icon_128_corner_grab_rounded.svg" type="Texture" id=6]
[ext_resource path="res://assets/icons/icon_128_fullscreen_variant.svg" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.117647 )
shadow_size = 20
shadow_offset = Vector2( 0, 5 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="DynamicFont" id=4]
size = 1

[node name="CustomDragableWindowPopup" type="PopupPanel"]
self_modulate = Color( 0.0901961, 0.113725, 0.129412, 1 )
margin_right = 1193.0
margin_bottom = 656.0
custom_styles/panel = SubResource( 3 )
popup_exclusive = true
script = ExtResource( 3 )

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Titlebar" type="PanelContainer" parent="Content"]
self_modulate = Color( 0.0588235, 0.2, 0.337255, 1 )
margin_right = 1193.0
margin_bottom = 29.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Content/Titlebar"]
margin_top = 4.0
margin_right = 1193.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Window title"
align = 1

[node name="TitleButtons" type="HBoxContainer" parent="Content/Titlebar/Label"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -12.5
margin_bottom = 12.5
rect_min_size = Vector2( 0, 22 )

[node name="MaximizeButton" parent="Content/Titlebar/Label/TitleButtons" instance=ExtResource( 1 )]
margin_right = 28.0
margin_bottom = 25.0
rect_min_size = Vector2( 28, 22 )
toggle_mode = true
icon_tex = ExtResource( 7 )
icon_margin = 2

[node name="CloseButton" parent="Content/Titlebar/Label/TitleButtons" instance=ExtResource( 1 )]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 25.0
rect_min_size = Vector2( 28, 22 )
icon_tex = ExtResource( 2 )
icon_margin = 2

[node name="Spacer" type="Control" parent="Content/Titlebar/Label/TitleButtons"]
margin_left = 64.0
margin_right = 64.0
margin_bottom = 25.0

[node name="Content" type="MarginContainer" parent="Content"]
margin_top = 33.0
margin_right = 1193.0
margin_bottom = 605.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Footer" type="MarginContainer" parent="Content"]
margin_top = 609.0
margin_right = 1193.0
margin_bottom = 656.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 14

[node name="Footerbar" type="HBoxContainer" parent="Content/Footer"]
margin_left = 10.0
margin_right = 1183.0
margin_bottom = 33.0
alignment = 2

[node name="AddWidgetButton" type="Button" parent="Content/Footer/Footerbar"]
margin_left = 1096.0
margin_right = 1173.0
margin_bottom = 33.0
text = "Accept"

[node name="ResizeButtonContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ResizeButton" type="Button" parent="ResizeButtonContainer"]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
self_modulate = Color( 1, 1, 1, 0.439216 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -16.0
rect_min_size = Vector2( 16, 16 )
focus_mode = 0
mouse_default_cursor_shape = 12
size_flags_horizontal = 8
size_flags_vertical = 8
theme_type_variation = "ButtonBorderless"
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
expand_icon = true
script = ExtResource( 5 )

[connection signal="pressed" from="Content/Titlebar/Label/TitleButtons/MaximizeButton" to="." method="_on_MaximizeButton_pressed"]
[connection signal="pressed" from="Content/Titlebar/Label/TitleButtons/CloseButton" to="." method="_on_IconButton_pressed"]
[connection signal="pressed" from="Content/Footer/Footerbar/AddWidgetButton" to="." method="_on_AddWidgetButton_pressed"]
[connection signal="button_down" from="ResizeButtonContainer/ResizeButton" to="." method="_on_ResizeButton_button_down"]
